@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Documentation]
+  - Document support policy for older Perl versions.
 
 v0.2.6    2022-09-22 16:42:59+01:00 Europe/London
  [Enhancements]
